Fix alignment of icons in views (#695)
This improves the alignment of icons by changing `vertical-align` to `text-bottom` in `.admin-wrapper` and keeping `top` in `.table-action-link`

A consisten style without having to override would be preferred, but that would require more significant changes.

--- a/app/javascript/flavours/polyam/styles/tables.scss
+++ b/app/javascript/flavours/polyam/styles/tables.scss
@@ -146,6 +146,11 @@ a.table-action-link {
   &:first-child {
     padding-inline-start: 0;
   }
+
+  // Polyam: Fix alignment due to `text-bottom` in admin-wrapper
+  .icon {
+    vertical-align: top;
+  }
 }
 
 .batch-table {
